--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,6 +1,8 @@
 FROM python:3.9
+EXPOSE 8501
 WORKDIR /src
-COPY requirements.txt requirements.txt
+COPY requirements.txt ./requirements.txt
 RUN pip3 install -r requirements.txt
-COPY main.py app/main.py
-ENTRYPOINT ["streamlit", "run", "app/main.py"]
+RUN mkdir ./app
+COPY main.py ./app/main.py
+ENTRYPOINT ["streamlit", "run", "./app/main.py"]
