--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,6 +3,7 @@ EXPOSE 8501
 WORKDIR /src
 COPY requirements.txt ./requirements.txt
 RUN pip3 install -r requirements.txt
+RUN mkdir ./data
 RUN mkdir ./app
 COPY main.py ./app/main.py
 ENTRYPOINT ["streamlit", "run", "./app/main.py"]
