--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,9 +1,8 @@
 FROM python:3.9
 EXPOSE 8501
 WORKDIR /src
-COPY requirements.txt ./requirements.txt
+COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
-RUN mkdir data
 RUN mkdir app
-COPY app/main.py ./app/main.py
+RUN mkdir data
 ENTRYPOINT ["streamlit", "run", "app/main.py"]
