last thing is the categorize function

--- a/src/common/descriptions.yml
+++ b/src/common/descriptions.yml
@@ -91,3 +91,5 @@ phrase_maps:
   key_phrase: S SPORTING
 - description: ADVANCED AUTO
   key_phrase: ADVANCE AUTO
+- description: me
+  key_phrase: poop on
