--- a/src/common/categories.yml
+++ b/src/common/categories.yml
@@ -15,6 +15,9 @@ housing:
 - rent
 ignore:
 - ''
+income:
+- ''
+- salary
 insurance:
 - ''
 - auto
@@ -43,7 +46,7 @@ shopping:
 - clothing
 - electronics
 - gifts
-- health
+- health and wellness
 - home items
 - hygene
 - music gear
@@ -53,6 +56,7 @@ subscriptions & memberships:
 - ''
 - apps & software
 - gym
+- products
 - streaming
 taxes:
 - ''
